--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "angular": "1.3.20",
     "angular-animate": "1.3.20",
-    "angular-aria": "^1.5.8",
+    "angular-aria": "1.5.8",
     "angular-auto-focus": "1.0.4",
     "angular-chart.js": "0.5.1",
     "angular-cookies": "1.3.20",
@@ -35,51 +35,53 @@
     "angular-translate": "2.15.1",
     "angular-ui-router": "0.2.18",
     "angular-web-notification": "1.0.19",
-    "animate.css": "^3.1.1",
-    "autosize": "^3.0.13",
-    "blueimp-canvas-to-blob": "^2.1.0",
-    "bootstrap": "^3.3.5",
-    "bootstrap-switch": "^3.3.2",
-    "clipboard": "^1.5.16",
-    "copy-dir": "^1.3.0",
-    "dompurify": "^1.0.9",
-    "email-addresses": "^3.0.0",
-    "glob-all": "^3.2.1",
-    "iframe-resizer": "^3.5.5",
-    "jquery": "^2.1.1",
-    "jquery.focus": "^0.1.4",
-    "leaflet": "^0.7.3",
+    "animate.css": "3.1.1",
+    "autosize": "3.0.13",
+    "blueimp-canvas-to-blob": "2.1.0",
+    "bootstrap": "3.3.5",
+    "bootstrap-switch": "3.3.2",
+    "clipboard": "1.5.16",
+    "dompurify": "1.0.9",
+    "email-addresses": "3.0.0",
+    "iframe-resizer": "3.5.5",
+    "jquery": "2.1.1",
+    "jquery.focus": "0.1.4",
+    "leaflet": "0.7.3",
     "linagora-rse": "github:linagora/openpaas-esn",
     "linagora.esn.calendar": "github:linagora/linagora.esn.calendar",
     "localforage": "1.7.4",
-    "lodash": "^2.4.1",
-    "matchmedia": "^0.1.1",
-    "matchmedia-ng": "^1.0.8",
-    "material-shadows": "^2.0.1",
-    "mdi": "^2.0.46",
-    "mkdirp": "^1.0.4",
+    "lodash": "2.4.1",
+    "matchmedia": "0.1.1",
+    "matchmedia-ng": "1.0.8",
+    "material-shadows": "2.0.1",
+    "mdi": "2.0.46",
     "moment": "2.15.1",
-    "moment-timezone": "^0.5.17",
-    "ng-tags-input": "^3.2.0",
+    "moment-timezone": "0.5.17",
+    "ng-tags-input": "3.2.0",
     "re-tree": "0.0.2",
-    "replace-in-file": "^6.1.0",
-    "restangular": "^1.3.1",
-    "rimraf": "^3.0.2",
-    "roboto-fontface": "^0.4.3",
-    "showdown": "^1.5.0",
-    "summernote": "^0.8.2",
-    "ui-router-extras": "^0.1.0",
-    "videogular": "^1.4.4",
-    "videogular-buffering": "^1.4.4",
-    "videogular-controls": "^1.4.4",
-    "videogular-overlay-play": "^1.4.4",
+    "restangular": "1.3.1",
+    "roboto-fontface": "0.4.3",
+    "showdown": "1.5.0",
+    "summernote": "0.8.2",
+    "ui-router-extras": "0.1.0",
+    "videogular": "1.4.4",
+    "videogular-buffering": "1.4.4",
+    "videogular-controls": "1.4.4",
+    "videogular-overlay-play": "1.4.4",
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
+    "copy-dir": "^1.3.0",
     "css-loader": "^3.6.0",
     "exports-loader": "^1.0.0",
     "file-loader": "^6.0.0",
+    "glob-all": "^3.2.1",
+    "html-webpack-plugin": "^4.3.0",
     "less-loader": "^6.1.1",
+    "mkdirp": "1.0.4",
+    "pug-loader": "^2.4.0",
+    "replace-in-file": "^6.1.0",
+    "rimraf": "^3.0.2",
     "style-loader": "^1.2.1",
     "svg-inline-loader": "^0.8.2",
     "url-loader": "^4.1.0",
