--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "angular-ui-router": "0.2.18",
     "angular-web-notification": "1.0.19",
     "animate.css": "3.1.1",
+    "arrive": "2.2.1",
     "autosize": "3.0.13",
     "blueimp-canvas-to-blob": "2.1.0",
     "bootstrap": "3.3.5",
@@ -62,7 +63,7 @@
     "restangular": "1.3.1",
     "roboto-fontface": "0.4.3",
     "showdown": "1.5.0",
-    "summernote": "0.8.2",
+    "summernote": "github:linagora/summernote#0.8.2-1",
     "ui-router-extras": "0.1.0",
     "videogular": "1.4.4",
     "videogular-buffering": "1.4.4",
