--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "serve": "webpack-dev-server --watch --progress"
+    "serve": "webpack-dev-server --watch --progress",
+    "build:dev": "webpack"
   },
   "author": "",
   "license": "ISC",
