--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "webpack-dev-server": "^3.11.0"
   },
   "devDependencies": {
+    "command-line-args": "^5.1.1",
     "copy-dir": "^1.3.0",
     "css-loader": "^3.6.0",
     "exports-loader": "^1.0.0",
