--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "angular-translate": "2.15.1",
     "angular-ui-router": "0.2.18",
     "angular-web-notification": "1.0.19",
+    "angularjs-dragula": "2.0.0",
     "animate.css": "3.1.1",
     "arrive": "2.2.1",
     "autosize": "3.0.13",
@@ -46,6 +47,7 @@
     "dompurify": "1.0.9",
     "email-addresses": "3.0.0",
     "iframe-resizer": "3.5.5",
+    "jmap-draft-client": "^0.1.2",
     "jquery": "2.1.1",
     "jquery.focus": "0.1.4",
     "leaflet": "0.7.3",
@@ -63,9 +65,11 @@
     "re-tree": "0.0.2",
     "restangular": "1.3.1",
     "roboto-fontface": "0.4.3",
+    "sanitize-html": "github:linagora/sanitize-html#c89d4ebe09da48296f33cc80ddcc02e11d853265",
     "showdown": "1.5.0",
     "summernote": "github:linagora/summernote#0.8.2-1",
     "ui-router-extras": "0.1.0",
+    "ui-select": "0.19.8",
     "videogular": "1.4.4",
     "videogular-buffering": "1.4.4",
     "videogular-controls": "1.4.4",
@@ -77,6 +81,7 @@
     "copy-dir": "^1.3.0",
     "css-loader": "^3.6.0",
     "exports-loader": "^1.0.0",
+    "expose-loader": "^1.0.0",
     "file-loader": "^6.0.0",
     "glob-all": "^3.2.1",
     "html-webpack-plugin": "^4.3.0",
