--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "angular-web-notification": "1.0.19",
     "angularjs-dragula": "2.0.0",
     "animate.css": "3.1.1",
+    "apply-loader": "^2.0.0",
     "arrive": "2.2.1",
     "autosize": "3.0.13",
     "blueimp-canvas-to-blob": "2.1.0",
@@ -67,6 +68,7 @@
     "restangular": "1.3.1",
     "roboto-fontface": "0.4.3",
     "sanitize-html": "github:linagora/sanitize-html#c89d4ebe09da48296f33cc80ddcc02e11d853265",
+    "save-dev": "0.0.1-security",
     "showdown": "1.5.0",
     "summernote": "github:linagora/summernote#0.8.2-1",
     "ui-router-extras": "0.1.0",
@@ -88,6 +90,7 @@
     "html-webpack-plugin": "^4.3.0",
     "less-loader": "^6.1.1",
     "mkdirp": "1.0.4",
+    "pug": "^3.0.0",
     "pug-loader": "^2.4.0",
     "replace-in-file": "^6.1.0",
     "rimraf": "^3.0.2",
